--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:
   name: Hakan Torun
   bio: Computer Engineer @pardinus <br> Founder @zaqa <br> Open Source /#linux
   picture: assets/images/profile.jpg 
-  github: onepase # github username
+  github: vuvietnguyenit # github username
   twitter: onepase # twitter username
   facebook: onepase # facebook username
   instagram: onepase # instagram username
