--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 site: Ephesus
-title: Ephesus - Minimalist Jekyll Theme
+title: VuNguyen's SRE Blog
 keywords: ephesus, blog
 description: >-
-  Ephesus - Minimalist Jekyll Theme
+  Ephesus - Minimalist Jekyll Theme aaaaaaaaaaaaaaaaa
 lang: en-US
 timezone:  Asian/Ho_Chi_Minh
 repo: https://github.com/onepase/Ephesus # site repo [optional]
