--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ discus-identifier:  XXX
 # Author settings
 author:
   name: Vu Nguyen
-  bio: Site Reliability Engineer @CocCoc <br> Open Source /#linux
+  bio: Site Reliability Engineer @CocCoc <br> Girl-holic <3 <br> BPF Developer /#linux
   picture: assets/images/avatar.jpg 
   github: vuvietnguyenit # github username
   linkedin: vunguyen1407 # linkedin username
