--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ discus-identifier:  XXX
 # Author settings
 author:
   name: Vu Nguyen
-  bio: Site Reliability Engineer @CocCoc <br> BPF Developer /#linux <br> Beautifully broken - Charming chaos
+  bio: Site Reliability Engineer @CocCoc <br> eBPF Developer /#linux <br> Beautifully broken - Charming chaos
   picture: assets/images/avatar.jpg 
   github: vuvietnguyenit # github username
   linkedin: vunguyen1407 # linkedin username
